force-app/main/default/objects/DecisionApplication2__c/fields/PrepaymentManagementChargeTotal__c.field-meta.xml
<CustomField>
    <fullName>PrepaymentManagementChargeTotal__c</fullName>
    <label>翌月以降管理費前納合計額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>