force-app/main/default/objects/DecisionApplication2__c/fields/PrepaymentParkingFeeChargeTotal__c.field-meta.xml
<CustomField>
    <fullName>PrepaymentParkingFeeChargeTotal__c</fullName>
    <label>翌月以降駐車場代前納合計額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>