force-app/main/default/objects/DecisionApplication2__c/fields/PrepaymentRentTotal__c.field-meta.xml
<CustomField>
    <fullName>PrepaymentRentTotal__c</fullName>
    <label>翌月以降家賃前納合計額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>