force-app/main/default/objects/DecisionApplication2__c/fields/RenewalCharges__c.field-meta.xml
<CustomField>
    <fullName>RenewalCharges__c</fullName>
    <label>更新手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>