force-app/main/default/objects/DecisionApplication2__c/fields/RenewalCostDetailOtherSubtotal__c.field-meta.xml
<CustomField>
    <fullName>RenewalCostDetailOtherSubtotal__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>更新費用明細_その他_小計</label>
    <type>Text</type>
</CustomField>