force-app/main/default/objects/DecisionApplication2__c/fields/RenewalCostSubtotal__c.field-meta.xml
<CustomField>
    <fullName>RenewalCostSubtotal__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>更新費用_小計</label>
    <type>Text</type>
</CustomField>