force-app/main/default/objects/DecisionApplication2__c/fields/RenewalExpensesTotal__c.field-meta.xml
<CustomField>
    <fullName>RenewalExpensesTotal__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>更新諸費用合計</label>
    <type>Text</type>
</CustomField>