force-app/main/default/objects/DecisionApplication2__c/fields/RenewalExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>RenewalExpiryDate__c</fullName>
    <label>更新満了日</label>
    <type>Date</type>
</CustomField>