force-app/main/default/objects/DecisionApplication2__c/fields/RenewalOther2Difference__c.field-meta.xml
<CustomField>
    <fullName>RenewalOther2Difference__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>更新その他2_差額</label>
    <type>Text</type>
</CustomField>