force-app/main/default/objects/DecisionApplication2__c/fields/RenewalTermsChangeOther3Fields__c.field-meta.xml
<CustomField>
    <fullName>RenewalTermsChangeOther3Fields__c</fullName>
    <label>更新/条件変更その他3_ 項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>