force-app/main/default/objects/DecisionApplication2__c/fields/RenewalTermsOther1CurrentContractContent__c.field-meta.xml
<CustomField>
    <fullName>RenewalTermsOther1CurrentContractContent__c</fullName>
    <label>更新/条件変更その他1_現契約内容</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>