force-app/main/default/objects/DecisionApplication2__c/fields/RenovationBillingSubtotal__c.field-meta.xml
<CustomField>
    <fullName>RenovationBillingSubtotal__c</fullName>
    <formula>RenovationBillingOriginalRecoveryCost__c</formula>
    <label>リフォーム請求_小計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>