force-app/main/default/objects/DecisionApplication2__c/fields/RentCurrentContractContent__c.field-meta.xml
<CustomField>
    <fullName>RentCurrentContractContent__c</fullName>
    <label>家賃_現契約内容</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>