force-app/main/default/objects/DecisionApplication2__c/fields/RentDifference__c.field-meta.xml
<CustomField>
    <fullName>RentDifference__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>家賃_差額</label>
    <type>Text</type>
</CustomField>