force-app/main/default/objects/DecisionApplication2__c/fields/RenterFax__c.field-meta.xml
<CustomField>
    <fullName>RenterFax__c</fullName>
    <label>賃貸人_FAX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>