force-app/main/default/objects/DecisionApplication2__c/fields/RenterKana__c.field-meta.xml
<CustomField>
    <fullName>RenterKana__c</fullName>
    <label>賃貸人カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>