force-app/main/default/objects/DecisionApplication2__c/fields/RenterName__c.field-meta.xml
<CustomField>
    <fullName>RenterName__c</fullName>
    <label>賃貸人_氏名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>