force-app/main/default/objects/DecisionApplication2__c/fields/RenterPhone__c.field-meta.xml
<CustomField>
    <fullName>RenterPhone__c</fullName>
    <label>賃貸人_TEL</label>
    <type>Phone</type>
</CustomField>