force-app/main/default/objects/DecisionApplication2__c/fields/RentPayDate__c.field-meta.xml
<CustomField>
    <fullName>RentPayDate__c</fullName>
    <label>家賃負担日</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>