force-app/main/default/objects/DecisionApplication2__c/fields/RentRemittanceBankAccountType__c.field-meta.xml
<CustomField>
    <fullName>RentRemittanceBankAccountType__c</fullName>
    <label>家賃金送金_口座種別</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>普通預金</fullName>
            </value>
            <value>
                <fullName>当座預金</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>