force-app/main/default/objects/DecisionApplication2__c/fields/RentRemittanceContractorKana__c.field-meta.xml
<CustomField>
    <fullName>RentRemittanceContractorKana__c</fullName>
    <label>家賃金送金_名義カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>