force-app/main/default/objects/DecisionApplication2__c/fields/RentTotalNewContractContent__c.field-meta.xml
<CustomField>
    <fullName>RentTotalNewContractContent__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>月額合計_新契約内容</label>
    <type>Text</type>
</CustomField>