force-app/main/default/objects/DecisionApplication2__c/fields/RequestCategory__c.field-meta.xml
<CustomField>
    <fullName>RequestCategory__c</fullName>
    <label>依頼区分</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>支払</fullName>
            </value>
            <value>
                <fullName>データ変更</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>