force-app/main/default/objects/DecisionApplication2__c/fields/ResidentChangeCostTotal__c.field-meta.xml
<CustomField>
    <fullName>ResidentChangeCostTotal__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>入居者変更費用合計</label>
    <type>Text</type>
</CustomField>