force-app/main/default/objects/DecisionApplication2__c/fields/Reward__c.field-meta.xml
<CustomField>
    <fullName>Reward__c</fullName>
    <label>礼金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>