force-app/main/default/objects/DecisionApplication2__c/fields/RoomNumCurrentContractContent__c.field-meta.xml
<CustomField>
    <fullName>RoomNumCurrentContractContent__c</fullName>
    <label>部屋番号_現契約内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>