force-app/main/default/objects/DecisionApplication2__c/fields/RoomNumNewContractContent__c.field-meta.xml
<CustomField>
    <fullName>RoomNumNewContractContent__c</fullName>
    <label>部屋番号_新契約内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>