force-app/main/default/objects/DecisionApplication2__c/fields/SNTBillingAmount__c.field-meta.xml
<CustomField>
    <fullName>SNTBillingAmount__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>日本社宅サービスご請求額</label>
    <type>Text</type>
</CustomField>