force-app/main/default/objects/DecisionApplication2__c/fields/SpotBillingAmount4__c.field-meta.xml
<CustomField>
    <fullName>SpotBillingAmount4__c</fullName>
    <label>SPOT請求金額4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>