force-app/main/default/objects/DecisionApplication2__c/fields/SpotBillingAmount__c.field-meta.xml
<CustomField>
    <fullName>SpotBillingAmount__c</fullName>
    <label>SPOT請求金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>