force-app/main/default/objects/DecisionApplication2__c/fields/SpotBillingAmountTaxCategory1__c.field-meta.xml
<CustomField>
    <fullName>SpotBillingAmountTaxCategory1__c</fullName>
    <label>SPOT請求金額税区分1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>