force-app/main/default/objects/DecisionApplication2__c/fields/SpotBillingAmountTaxCategory2__c.field-meta.xml
<CustomField>
    <fullName>SpotBillingAmountTaxCategory2__c</fullName>
    <label>SPOT請求金額税区分2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>