force-app/main/default/objects/DecisionApplication2__c/fields/SpotBillingExpenseItems1__c.field-meta.xml
<CustomField>
    <fullName>SpotBillingExpenseItems1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SPOT請求費目1</label>
    <referenceTo>ExpenseItem__c</referenceTo>
    <relationshipLabel>決裁申請2</relationshipLabel>
    <relationshipName>ExpenseItems1Relation</relationshipName>
    <type>Lookup</type>
</CustomField>