force-app/main/default/objects/DecisionApplication2__c/fields/SpotBillingExpenseItems2__c.field-meta.xml
<CustomField>
    <fullName>SpotBillingExpenseItems2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SPOT請求費目2</label>
    <referenceTo>ExpenseItem__c</referenceTo>
    <relationshipLabel>決裁申請2 (SPOT請求費目2)</relationshipLabel>
    <relationshipName>ExpenseItems2Relation</relationshipName>
    <type>Lookup</type>
</CustomField>