force-app/main/default/objects/DecisionApplication2__c/fields/SpotBillingExpenseItems4__c.field-meta.xml
<CustomField>
    <fullName>SpotBillingExpenseItems4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SPOT請求費目4</label>
    <referenceTo>ExpenseItem__c</referenceTo>
    <relationshipLabel>決裁申請2 (SPOT請求費目4)</relationshipLabel>
    <relationshipName>ExpenseItems4Relation</relationshipName>
    <type>Lookup</type>
</CustomField>