force-app/main/default/objects/DecisionApplication2__c/fields/SpotBillingExpenseItemsEndDate1__c.field-meta.xml
<CustomField>
    <fullName>SpotBillingExpenseItemsEndDate1__c</fullName>
    <label>SPOT請求費目終了日1</label>
    <type>Date</type>
</CustomField>