force-app/main/default/objects/DecisionApplication2__c/fields/SpotBillingExpenseItemsEndDate2__c.field-meta.xml
<CustomField>
    <fullName>SpotBillingExpenseItemsEndDate2__c</fullName>
    <label>SPOT請求費目終了日2</label>
    <type>Date</type>
</CustomField>