force-app/main/default/objects/DecisionApplication2__c/fields/SpotBillingExpenseItemsEndDate4__c.field-meta.xml
<CustomField>
    <fullName>SpotBillingExpenseItemsEndDate4__c</fullName>
    <label>SPOT請求費目終了日4</label>
    <type>Date</type>
</CustomField>