force-app/main/default/objects/DecisionApplication2__c/fields/SpotBillingExpenseItemsStartDate3__c.field-meta.xml
<CustomField>
    <fullName>SpotBillingExpenseItemsStartDate3__c</fullName>
    <label>SPOT請求費目開始日3</label>
    <type>Date</type>
</CustomField>