force-app/main/default/objects/DecisionApplication2__c/fields/SpotBillingExpenseItemsStartDate4__c.field-meta.xml
<CustomField>
    <fullName>SpotBillingExpenseItemsStartDate4__c</fullName>
    <label>SPOT請求費目開始日4</label>
    <type>Date</type>
</CustomField>