force-app/main/default/objects/DecisionApplication2__c/fields/SpotBillingExpenseItemsStartDate5__c.field-meta.xml
<CustomField>
    <fullName>SpotBillingExpenseItemsStartDate5__c</fullName>
    <label>SPOT請求費目開始日5</label>
    <type>Date</type>
</CustomField>