force-app/main/default/objects/DecisionApplication2__c/fields/ThisMonthDailyRateRent__c.field-meta.xml
<CustomField>
    <fullName>ThisMonthDailyRateRent__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>当月日割家賃</label>
    <type>Text</type>
</CustomField>