force-app/main/default/objects/DecisionApplication2__c/fields/ThisMonthParkingFee__c.field-meta.xml
<CustomField>
    <fullName>ThisMonthParkingFee__c</fullName>
    <label>当月駐車場代</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>