force-app/main/default/objects/DecisionApplication2__c/fields/TransferCharges__c.field-meta.xml
<CustomField>
    <fullName>TransferCharges__c</fullName>
    <label>振込手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>