force-app/main/default/objects/DecisionApplication2__c/fields/WorkArrangeRequestContent__c.field-meta.xml
<CustomField>
    <fullName>WorkArrangeRequestContent__c</fullName>
    <label>作業手配依頼内容</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>