force-app/main/default/objects/DecisionApplication2__c/recordTypes/Change.recordType-meta.xml
<RecordType>
    <fullName>Change</fullName>
    <active>true</active>
    <label>入替</label>
</RecordType>