force-app/main/default/objects/DecisionApplication2__c/recordTypes/GarageCertification.recordType-meta.xml
<RecordType>
    <fullName>GarageCertification</fullName>
    <active>true</active>
    <label>車庫証明</label>
</RecordType>