force-app/main/default/objects/DecisionApplication2__c/recordTypes/WorkArrangement.recordType-meta.xml
<RecordType>
    <fullName>WorkArrangement</fullName>
    <active>true</active>
    <label>作業手配</label>
</RecordType>