force-app/main/default/objects/DecisionApplication2__c/listViews/AcceptQueue_DecisionApplication2.listView-meta.xml
<ListView>
    <fullName>AcceptQueue_DecisionApplication2</fullName>
    <filterScope>Queue</filterScope>
    <label>受付チーム</label>
    <queue>AcceptQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>