force-app/main/default/objects/DecisionApplication2__c/listViews/DataManagementQueue_DecisionApplication2.listView-meta.xml
<ListView>
    <fullName>DataManagementQueue_DecisionApplication2</fullName>
    <filterScope>Queue</filterScope>
    <label>データ管理チーム</label>
    <queue>DataManagementQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>