force-app/main/default/objects/DecisionApplication2__c/listViews/FinanceQueue_DecisionApplication2.listView-meta.xml
<ListView>
    <fullName>FinanceQueue_DecisionApplication2</fullName>
    <filterScope>Queue</filterScope>
    <label>経理チーム</label>
    <queue>FinanceQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>